# ChangeLog for dev-ruby/simplecov
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/simplecov/ChangeLog,v 1.9 2014/07/27 07:03:53 graaff Exp $

*simplecov-0.9.0 (27 Jul 2014)

  27 Jul 2014; Hans de Graaff <graaff@gentoo.org> +simplecov-0.9.0.ebuild:
  Version bump.

  27 Jun 2014; Hans de Graaff <graaff@gentoo.org> simplecov-0.8.2.ebuild:
  Add ruby20.

*simplecov-0.8.2 (23 Jan 2014)

  23 Jan 2014; Hans de Graaff <graaff@gentoo.org> +simplecov-0.8.2.ebuild:
  Version bump.

  25 Aug 2013; Hans de Graaff <graaff@gentoo.org> -simplecov-0.5.4.ebuild:
  Cleanup. There is no need to keep old versions around.

  23 Aug 2013; Rick Farina <zerochaos@gentoo.org> simplecov-0.5.4.ebuild:
  no tests for now, they don't work

*simplecov-0.5.4 (23 Aug 2013)

  23 Aug 2013; Rick Farina <zerochaos@gentoo.org> +simplecov-0.5.4.ebuild:
  adding older release as a dep for metasploit due to upstream bug in simplecov
  https://github.com/colszowka/simplecov/issues/127

  14 Aug 2013; Manuel Rüger <mrueg@gentoo.org> simplecov-0.7.1.ebuild:
  Fix DESC and HOMEPAGE

  22 May 2013; Hans de Graaff <graaff@gentoo.org> metadata.xml:
  This package is maintained in the ruby herd.

*simplecov-0.7.1 (30 Apr 2013)

  30 Apr 2013; Hans de Graaff <graaff@gentoo.org> +simplecov-0.7.1.ebuild,
  +metadata.xml:
  Initial import. Moved from my overlay.