@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/simplecov
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/simplecov/ChangeLog,v 1.9 2014/07/27 07:03:53 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/simplecov/ChangeLog,v 1.10 2014/09/28 06:13:38 graaff Exp $
+
+*simplecov-0.9.1 (28 Sep 2014)
+
+  28 Sep 2014; Hans de Graaff <graaff@gentoo.org> +simplecov-0.9.1.ebuild:
+  Version bump.
 
 *simplecov-0.9.0 (27 Jul 2014)
 
